# emmanoulopoulos

./: .gitignore  LICENSE.md  README.md  environment.yml  setup.cfg  setup.py
data/: lc_2008_2020.fits
emmanoulopoulos/: emmanoulopoulos_lc_simulation.py  lightcurve.py  models.py  pyproject.toml
emmanoulopoulos/scripts/: plots.py  simulate_lightcurves.py
emmanoulopoulos/test/: conftest.py  test_LC.py  test_TK.py  test_emmanoulolpoulos.py
scripts/: plots.py  simulate_lightcurves.py
