[metadata]
name = emmanoulopoulos_python3
version = 0.1.0
description = Python3 implementation of the Emmanoulopoulos algorithm for generating artificial lihgtcurves
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

classifiers = 
    License :: OSI Approved :: MIT License

[options]
python_requires= >=3.6